Fix gap on Firebase login page

--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -628,8 +628,9 @@ input[type=time] {
 }
 
 #firebaseui-auth-container {
-    text-align: center;
-    padding-top: 10%;
+  height: 70vh;
+  padding-top: 10%;
+  text-align: center;
 }
 
 .firebaseui-idp-list>.firebaseui-list-item {
